--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "compression": "^1.7.1",
     "dotenv": "^8.2.0",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "svelte-star-rating": "file:../../../../73 - Svelte Star Rating/src"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
