--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^8.2.0",
     "polka": "next",
     "sirv": "^0.4.0",
-    "svelte-star-rating": "^1.0.0"
+    "svelte-star-rating": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -28,11 +28,16 @@
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@testing-library/jest-dom": "^5.10.0",
+    "babel-jest": "^26.0.1",
+    "cypress": "^4.8.0",
+    "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^5.3.0",
     "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-jester": "^1.0.6"
   }
 }
