--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-terser": "^5.3.0",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
-    "svelte-jester": "^1.0.6"
+    "svelte-jester": "^1.0.6",
+    "svelte-scrollto": "^0.2.0"
   }
 }
