improve manifest and icons

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
 	"background_color": "#ffffff",
-	"theme_color": "#333333",
+	"theme_color": "#b379ec",
 	"name": "VPN Fácil",
 	"short_name": "VPN Fácil",
 	"display": "minimal-ui",
