--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "compression": "^1.7.1",
     "dotenv": "^8.2.0",
     "polka": "next",
-    "sirv": "^0.4.0",
-    "svelte-star-rating": "^1.1.1"
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -39,6 +38,7 @@
     "sapper": "^0.27.16",
     "svelte": "^3.24.0",
     "svelte-jester": "^1.0.6",
-    "svelte-scrollto": "^0.2.0"
+    "svelte-scrollto": "^0.2.0",
+    "svelte-star-rating": "^1.1.1"
   }
 }
