fix alphabetically sorting all vpns

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vpn-facil",
-  "version": "1.0.0",
+  "name": "vpnfacil",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "sapper dev",
