--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.1.1",
     "polka": "next",
+    "prismjs": "^1.21.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "jest": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.21.0",
+    "rollup-plugin-glob": "^1.0.2",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^5.3.0",
     "sapper": "^0.27.16",
