--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "marked": "^1.1.1",
     "polka": "next",
     "prismjs": "^1.21.0",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "svelte-local-storage-store": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
