--- a/package.json
+++ b/package.json
@@ -13,13 +13,9 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
-    "gray-matter": "^4.0.2",
-    "marked": "^1.1.1",
     "node-fetch": "^2.6.1",
     "polka": "next",
-    "prismjs": "^1.21.0",
     "sirv": "^0.4.0",
     "svelte-local-storage-store": "^0.1.3"
   },
@@ -37,6 +33,7 @@
     "babel-jest": "^26.1.0",
     "cypress": "^4.10.0",
     "jest": "^26.1.0",
+    "mdsvex": "^0.8.8",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.21.0",
     "rollup-plugin-glob": "^1.0.2",
