--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.7.0",
   "private": true,
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
+    "dev": "sapper dev --ext '.svelte .svx'",
+    "build": "sapper build --legacy --ext '.svelte .svx'",
+    "export": "sapper export --legacy --ext '.svelte .svx'",
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
