--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.1",
     "polka": "next",
     "sirv": "^0.4.0",
-    "svelte-local-storage-store": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -25,6 +22,7 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.4",
+    "@fec/remark-a11y-emoji": "^2.0.0",
     "@rollup/plugin-babel": "^5.0.4",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
@@ -32,8 +30,13 @@
     "@testing-library/jest-dom": "^5.11.0",
     "babel-jest": "^26.1.0",
     "cypress": "^4.10.0",
+    "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
+    "gray-matter": "^4.0.2",
     "jest": "^26.1.0",
+    "marked": "^1.2.0",
     "mdsvex": "^0.8.8",
+    "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.21.0",
     "rollup-plugin-glob": "^1.0.2",
@@ -42,6 +45,7 @@
     "sapper": "^0.27.16",
     "svelte": "^3.24.0",
     "svelte-jester": "^1.0.6",
+    "svelte-local-storage-store": "^0.1.3",
     "svelte-scrollto": "^0.2.0",
     "svelte-star-rating": "^1.1.1"
   }
