--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^0.4.0",
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -34,11 +34,11 @@
     "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
     "jest": "^26.1.0",
-    "marked": "^1.2.0",
     "mdsvex": "^0.8.8",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.21.0",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-glob": "^1.0.2",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^5.3.0",
