--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^26.1.0",
     "mdsvex": "^0.8.8",
     "node-fetch": "^2.6.1",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.21.0",
     "rollup-plugin-copy": "^3.3.0",
@@ -46,6 +47,7 @@
     "svelte": "^3.24.0",
     "svelte-jester": "^1.0.6",
     "svelte-local-storage-store": "^0.1.3",
+    "svelte-preprocess": "^4.3.2",
     "svelte-scrollto": "^0.2.0",
     "svelte-star-rating": "^1.1.1"
   }
