--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rollup-plugin-terser": "^5.3.0",
     "sapper": "^0.27.16",
     "svelte": "^3.24.0",
+    "svelte-fluid-header": "^0.2.1",
     "svelte-jester": "^1.0.6",
     "svelte-local-storage-store": "^0.1.3",
     "svelte-preprocess": "^4.3.2",
