--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "sapper dev --ext '.svelte .svx'",
     "build": "sapper build --legacy --ext '.svelte .svx'",
     "export": "sapper export --legacy --ext '.svelte .svx'",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "start": "node __sapper__/build"
   },
   "dependencies": {
     "compression": "^1.7.1",
@@ -17,37 +14,33 @@
     "sirv": "^0.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/runtime": "^7.11.2",
     "@fec/remark-a11y-emoji": "^2.0.0",
-    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.3",
-    "@testing-library/jest-dom": "^5.11.0",
-    "babel-jest": "^26.1.0",
-    "cypress": "^4.10.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
-    "jest": "^26.1.0",
     "mdsvex": "^0.8.8",
     "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "remark-external-links": "^7.0.1",
-    "rollup": "^2.21.0",
+    "rollup": "^2.28.2",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-glob": "^1.0.2",
     "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-terser": "^5.3.1",
     "sapper": "^0.27.16",
-    "svelte": "^3.24.0",
+    "svelte": "^3.29.0",
     "svelte-fluid-header": "^0.2.1",
-    "svelte-jester": "^1.0.6",
+    "svelte-jester": "^1.1.5",
     "svelte-local-storage-store": "^0.1.3",
     "svelte-preprocess": "^4.3.2",
     "svelte-scrollto": "^0.2.0",
