--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "country-flag-emoji": "^1.0.3",
     "polka": "next",
     "sirv": "^0.4.0"
   },
