--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@sentry/browser": "^5.27.1",
+    "@sentry/tracing": "^5.27.1",
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
