--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpnfacil",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "private": true,
   "scripts": {
     "dev": "sapper dev --ext '.svelte .svx'",
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "country-flag-emoji": "^1.0.3",
     "polka": "next",
     "sirv": "^0.4.0"
   },
@@ -23,11 +22,14 @@
     "@fec/remark-a11y-emoji": "^2.0.0",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@sentry/browser": "^5.27.1",
     "@sentry/tracing": "^5.27.1",
+    "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "country-flag-emoji": "^1.0.3",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
