--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-url": "^5.0.1",
     "@sentry/browser": "^5.27.1",
     "@sentry/tracing": "^5.27.1",
     "axios": "^0.21.0",
