--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "@sentry/browser": "^5.27.3",
     "@sentry/tracing": "^5.27.3",
     "axios": "^0.21.0",
-    "chart.js": "^2.9.4",
     "country-flag-emoji": "^1.0.3",
     "country-list-spanish": "^0.2.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "google-charts": "^2.0.0",
     "gray-matter": "^4.0.2",
     "mdsvex": "^0.8.8",
     "node-fetch": "^2.6.1",
