replace country-flag-emoji with country-code-emoji. much more efficient

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@sentry/browser": "^5.27.3",
     "@sentry/tracing": "^5.27.3",
     "axios": "^0.21.0",
-    "country-flag-emoji": "^1.0.3",
+    "country-code-emoji": "^1.0.0",
     "country-list-spanish": "^0.2.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
